[010-0.0.6]:: Post(s) formatting + Menubar Fix >> Roughed out the multipl posts styling and fixed an issue where the menubar was behind certain text elements on the page.

--- a/blog/src/menubar/menubar.css
+++ b/blog/src/menubar/menubar.css
@@ -10,6 +10,8 @@
     align-items: center;
 
     font-family: 'Julius Sans One', sans-serif;
+
+    z-index: 999;
 }
 
 .left, .right{
